Update developer setup to include VM Option - got rid of WinUtils step